# web

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  尚硅谷大模型技术之FastAPI&SQLAlchemyV0.9.docx  尚硅谷大模型技术之FastAPI&SQLAlchemyV1.1.docx  尚硅谷大模型技术之Web1.0.docx  尚硅谷大模型技术之Web1.1.docx  尚硅谷大模型技术之协程V0.9.docx  尚硅谷大模型项目之对话系统V0.9.docx
app/: .env  (+1 more)
backend/: README.md  pyproject.toml
backend/app/: config.py  init_db.py  main.py
backend/app/configs/: .env
backend/app/entities/: chat.py
backend/app/exceptions/: __init__.py  auth.py  base.py  chat.py  conversation.py  handlers.py  model_config.py  user.py
backend/app/handlers/: __init__.py  auth_exception_handler.py  chat_exception_handler.py  conversation_exception_handler.py  model_config_exception_handler.py  user_exception_handler.py
backend/app/middleware/: log.py
backend/app/middlewares/: __init__.py  auth.py  trace.py
backend/app/repositories/: conversation.py  message.py
backend/app/routers/api/: __init__.py  chat.py  conversation.py  message.py
backend/app/schemas/: __init__.py  chat.py  conversation.py  message.py  model_config.py  user.py
backend/app/services/: auth.py  chat.py  conversation.py  database.py  model_config.py  user.py
backend/app/sql/: chat.sql
backend/app/utils/: _init_db.py  call_model.py  context.py  cos.py  crypto.py  db.py  http_client.py  log.py
backend/configs/: .env  config.yml
backend/docker/: compose.yml
backend/sql/mysql/: chat.sql
backend/tests/: conftest.py  test_chat.py  test_conversation.py
(+79 files in other folders)
